crates/swc_ecma_parser/tests/test262-error-references/fail/5e60832af79173e3.js.stderr
error: Expected +, - or decimal digit after e
 --> $DIR/tests/test262-parser/fail/5e60832af79173e3.js:1:3
  |
1 | 3e
  |   ^

